Check login page user name

--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -61,6 +61,10 @@ header {
     font-size: 21px;
 }
 
+#profile_letters{
+    font-size: 21px;
+}
+
 
 body {
     background-image: url("../../image/background\ bus\ image.webp");
