--- a/assets/pages/styles/busList.css
+++ b/assets/pages/styles/busList.css
@@ -25,21 +25,12 @@ header {
 }
 
 
-#side_bar {
-    width: 340px;
-    height: 100vh;
-    background-color: #ffffff;
-    position: fixed;
-    top: 115px;
-}
-
 
 /* Bus list container styling */
 #bus_container {
     display: flex;
     justify-content: center;
     padding: 20px;
-    background-color: #f8f9fa;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -630,3 +621,105 @@ header {
     cursor: pointer;
 }
 
+
+
+#side_bar {
+     width: 340px;
+     height: 100vh;
+     background-color: #ffffff;
+     position: fixed;
+     top: 115px;
+     z-index: 1;
+     font-family: 'Poppins', sans-serif;
+ }
+
+
+#bus_type {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 70px;
+    margin-left: 50px;
+    
+}
+
+
+
+#ac_bus,
+#nonac_bus,
+#sleeper_bus {
+    width: 170px;
+    height: fit-content;
+    padding: 5px;
+    background-color: #f3f3f3;
+    box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.2); /* Added subtle shadow */
+    text-align: center;
+    cursor: pointer;
+    z-index: 2;
+    border-radius: 5px;
+    transition: background-color 0.4s ease, box-shadow 0.4s ease; /* Smooth transition */
+}
+
+#ac_bus:hover,
+#nonac_bus:hover,
+#sleeper_bus:hover {
+    background-color: #e0e0e0; /* Slightly darker background on hover */
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.3); /* Enhanced shadow on hover */
+}
+
+
+#seat_available {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-left: 50px;
+    margin-top: 70px;
+    z-index: 2;
+}
+
+#single_seat {
+    width: 170px;
+    height: fit-content;
+    padding: 5px;
+    background-color: #f3f3f3;
+    box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.2); /* Added subtle shadow */
+    text-align: center;
+    cursor: pointer;
+    z-index: 2;
+    border-radius: 5px;
+    transition: background-color 0.4s ease, box-shadow 0.4s ease;
+}
+#single_seat:hover{
+    background-color: #e0e0e0; /* Slightly darker background on hover */
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.3);
+}
+
+
+#amenities {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 70px;
+    margin-left: 50px;
+    z-index: 2;
+}
+
+#water_bottle,
+#blankets,
+#charging_point {
+    width: 170px;
+    height: fit-content;
+    padding: 5px;
+    background-color: #f3f3f3;
+    box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.2); /* Added subtle shadow */
+    text-align: center;
+    cursor: pointer;
+    z-index: 2;
+    border-radius: 5px;
+    transition: background-color 0.4s ease, box-shadow 0.4s ease;
+}
+
+#water_bottle:hover,#blankets:hover, #charging_point:hover{
+    background-color: #e0e0e0; /* Slightly darker background on hover */
+    box-shadow: 0px 4px 8px 0 rgba(0, 0, 0, 0.3);
+} 
