--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -229,6 +229,7 @@ body {
     font-size: 20px;
     width: 200px;
     padding: 5px 10px 5px 4px;
+    border-radius: 5px;
 }
 
 #from:hover,
@@ -269,6 +270,7 @@ body {
     font-size: 20px;
     width: 200px;
     padding: 5px 10px 5px 4.5px;
+    border-radius: 5px;
 }
 
 #to:hover,
