--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -73,7 +73,12 @@ body {
     background-position-y: 115px;
 
 }
-
+@media only screen and (max-width: 768px) {
+    body {
+        background-image: none;
+    }
+  }
+  
 #bus_search_bg {
     width: 1150px;
     height: 100px;
@@ -88,8 +93,8 @@ body {
 }
 
 #book_bus_ticket {
-    font-family: "Shrikhand", serif;
-    font-weight: 400;
+    font-family: "poppins", serif;
+    font-weight: bold;
     position: absolute;
     top: 260px;
     left: 560px;
@@ -100,13 +105,14 @@ body {
 }
 
 #tag_line {
-    font-family: "Shrikhand", serif;
+    font-family: "poppins", serif;
     font-weight: 400;
     position: absolute;
-    bottom: 30px;
-    left: 410px;
+    bottom: 50px;
+    left: 450px;
     color: white;
     font-size: 40px;
+    font-weight: bold;
 }
 
 #from_bus {
@@ -544,6 +550,7 @@ body {
 .dropdown-item {
     padding: 12px;
     font-size: 16px;
+    font-family: "poppins", sans-serif;
     color: #333;
     cursor: pointer;
     transition: background-color 0.3s ease, padding-left 0.2s ease;
@@ -566,3 +573,7 @@ body {
     transition: opacity 0.3s ease-out;
 }
 
+.confirmationDialog p {
+    font-family: "poppins", sans-serif;
+    font-size: 17px;
+}
