--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -35,6 +35,7 @@ header {
     font-family: 'Poppins', sans-serif;
     transition: background-color 0.3s ease;
     font-size: 18px;
+    z-index: 2;
 }
 
 #myBooking:hover{
@@ -183,6 +184,7 @@ body {
     flex-direction: column;
     position: relative;
     right: 250px;
+    bottom: 5px;
 }
 
 .date_input label {
@@ -192,8 +194,10 @@ body {
 }
 
 #date {
-    border: none;
-    font-size: 15px;
+    border: 1px solid black;
+    padding: 5px;
+    font-size: 16px;
+    border-radius: 5px;
 }
 
 #line {
@@ -202,7 +206,7 @@ body {
     background: rgb(0, 0, 0);
     background: linear-gradient(0deg, rgba(0, 0, 0, 1) 24%, rgba(255, 255, 255, 1) 26%, rgba(255, 255, 255, 1) 74%, rgba(0, 0, 0, 1) 76%);
     position: relative;
-    right: 155px;
+    right: 156px;
 }
 
 #line2 {
