--- a/assets/pages/styles/seats.css
+++ b/assets/pages/styles/seats.css
@@ -36,6 +36,9 @@ header #leftArrow:hover {
     top: 200px;
 }
 
+#seatLengend{
+    color: rgb(67, 67, 67);
+}
 #availableDiv, #unAvailableDiv, #femaleDiv {
     display: flex;
     gap: 10px;
@@ -66,18 +69,41 @@ header #leftArrow:hover {
     flex-direction: column;
     gap: 20px;
     margin-left: 130px;
-    margin-top: 80px;
+    margin-top: 60px;
 }
 #lowerDeckDiv, #upperDeckDiv{
     background-color: #fff;
     width: 540px;
     height: 230px;
+    border-left: 5.5px solid rgb(250, 107, 121);
+    /* border-right: 5.5px solid rgb(119, 119, 119); */
     
 }
 
-#steering{
-    font-size: 50px;
-    color: rgb(0, 0, 0);
-    z-index: 10000;
+#lowerDeckHeading, #upperDeckHeading{
+    color: rgb(67, 67, 67);
+    
+}
+#steering {
+    width: 27px; /* Adjust size */
+    height: 27px;
+    margin: 5px;
+    margin-top: 20px;
+    transform: rotate(270deg);
+}
+
+#driverLine{
+    width: 2px;
+    height: 200px;
+    background-color: rgb(119, 119, 119);
+    position: relative;
+    left: 45px;
+    bottom: 43px;
 
 }
+
+
+
+
+
+
