--- a/assets/pages/styles/home.css
+++ b/assets/pages/styles/home.css
@@ -29,17 +29,45 @@ header {
     height: fit-content;
     padding: 10px;
     border-radius: 10px;
-    margin-right: 350px;
-    margin-top: 35px;
+    position: relative;
+    left: 300px;
+    top: 35px;
     cursor: pointer;
     font-family: 'Poppins', sans-serif;
     transition: background-color 0.3s ease;
     font-size: 18px;
     z-index: 2;
+    transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 #myBooking:hover{
-    background-color: #de3b33;
+    background-color: #b10f07;
+    transform: scale(1.05); /* Scales the button slightly */
+}
+
+#registerBus{
+    background-color: rgb(248, 74, 91);
+    color: white;
+    width: fit-content;
+    height: fit-content;
+    padding: 10px;
+    border-radius: 10px;
+    font-weight: bold;
+    cursor: pointer;
+    font-family: 'Poppins', sans-serif;
+    transition: background-color 0.3s ease;
+    font-size: 18px;
+    z-index: 2;
+    border: none;
+    display: none;
+    position: relative;
+    left: 100px;
+    top: 35px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+#registerBus:hover{
+    background-color: #b10f07;
+    transform: scale(1.05); /* Scales the button slightly */
 }
 #profile {
     padding: 0.5rem 0.5rem;
@@ -142,26 +170,7 @@ body {
     /* border: none;  */
 }
 
-/*button {
-    background: none;
-    Remove background
-    border: none;
-    Remove border
-    padding: 0;
-    Remove padding
-    margin: 0;
-    Remove margin
-    font: inherit;
-    Inherit font style from parent
-    color: inherit;
-    Inherit text color
-    cursor: pointer;
-    Show pointer on hover
-    outline: none;
-    Remove outline
-    box-shadow: none;
-     Remove box-shadow 
-}*/
+
 
 
 
@@ -198,6 +207,7 @@ body {
     padding: 5px;
     font-size: 16px;
     border-radius: 5px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 #line {
@@ -240,12 +250,10 @@ body {
     width: 200px;
     padding: 5px 10px 5px 4px;
     border-radius: 5px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-#from:hover,
-#from:focus {
-    outline: none;
-}
+
 
 #to_bus {
     font-size: 2rem;
@@ -281,10 +289,14 @@ body {
     width: 200px;
     padding: 5px 10px 5px 4.5px;
     border-radius: 5px;
+    transition: border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-#to:hover,
-#to:focus {
+
+
+#date:focus, #from:focus, #to:focus{
+    border-color: #f44b4b;
+    box-shadow: 0 0 5px #f44b4b;
     outline: none;
 }
 
@@ -303,7 +315,7 @@ body {
 }
 
 #search_bus_button:hover {
-    background-color: #de3b33;
+    background-color: #b10f07;
 }
 
 /* Profile Container */
