--- a/assets/pages/styles/seats.css
+++ b/assets/pages/styles/seats.css
@@ -64,7 +64,7 @@ header #leftArrow:hover {
 #femaleColorBox {
     width: 50px;
     height: 25px;
-    border: 1.5px solid rgb(255, 182, 182);
+    background-color: rgb(255, 175, 175);
 }
 
 .seats {
@@ -339,7 +339,8 @@ header #leftArrow:hover {
     max-height: 378px; /* Limit height to enable scrolling */
     overflow-y: auto;  /* Enable vertical scrolling when the content exceeds the height */
     padding-right: 10px; /* Optional padding for aesthetics */
-    padding-left: 5px;
+    padding-left: 10px;
+    scrollbar-width: none;
   }
   
  
@@ -449,6 +450,8 @@ header #leftArrow:hover {
     background-color: #b10f07; /* Change to desired hover color */
     transform: scale(1.02); /* Scales the button slightly */
 }
+
+
 
 /* Overlay style */
 .overlay {
@@ -597,3 +600,33 @@ header #leftArrow:hover {
     font-size: 13px;
 }
 
+
+/* Loader styles */
+.loader {
+    display: none;
+    /* Initially hidden */
+    border: 8px solid #f3f3f3;
+    /* Light gray */
+    border-top: 8px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
+
+/* Keyframes for spinner */
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
