Change the all path

--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -96,7 +96,7 @@ header {
 
 
 body {
-    background-image: url("../../image/background_bus_img.webp");
+    background-image: url("../image/background_bus_img.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position-y: 115px;
