--- a/assets/styles/seats.css
+++ b/assets/styles/seats.css
@@ -42,7 +42,8 @@ header #leftArrow:hover {
 
 #availableDiv,
 #unAvailableDiv,
-#femaleDiv {
+#femaleDiv,
+#othersDiv {
     display: flex;
     gap: 10px;
 }
@@ -64,7 +65,15 @@ header #leftArrow:hover {
 #femaleColorBox {
     width: 50px;
     height: 25px;
-    background-color: rgb(255, 175, 175);
+    background-color: #fafafa;
+    border: 2px solid rgb(255, 175, 175);
+}
+
+#othersColorBox{
+    width: 50px;
+    height: 25px;
+    background-color: #fafafa;
+    border: 2px solid rgb(169, 163, 255);
 }
 
 .seats {
@@ -470,7 +479,7 @@ header #leftArrow:hover {
     position: absolute;
     top: 0;
     right: 0;
-    background-color: white;
+    background-color: rgb(241, 241, 241);
     width: 600px;
     height: 100vh;
     z-index: 1000;
@@ -499,6 +508,7 @@ header #leftArrow:hover {
 
 #headingForPassengerDiv {
     text-align: center;
+    color: #424242;
 }
 
 .seatForm {
@@ -546,12 +556,13 @@ header #leftArrow:hover {
 
 #countOfPassenger {
     font-size: 18px;
+    color: red;
 }
 
 #payButtonDiv{
     width: 600px;
     height: 100px;
-    background-color: white;
+    background-color: rgb(241, 241, 241);
     position: fixed;
     bottom: 0px;
     right: 0px;
@@ -589,7 +600,7 @@ header #leftArrow:hover {
     text-align: center;
     width: 600px;
     height: 50px;
-    background-color: white;
+    background-color: rgb(241, 241, 241);
     position: fixed;
     top: 0px;
     right: 0px;
